--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,15 @@ dependencies:
   amplify_auth_cognito: ^0.3.0-rc.4
   amplify_datastore: ^0.3.0-rc.4
   amplify_api: ^0.3.0-rc.4
+  amplify_analytics_pinpoint: ^0.3.0-rc.4
   amplify_authenticator: ^0.1.0-rc.3
+  get: ^4.6.1
+  font_awesome_flutter: ^9.1.0
+  intl: ^0.17.0
+  image_picker: ^0.8.3+2
+  uuid: ^3.0.4
+  transparent_image: ^2.0.0
+  cached_network_image: ^3.1.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -63,9 +71,14 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - images/facebook-logo.png
+    - images/google-logo.png
+    - images/amazon-logo.png
+    - images/applogo.png
+    - images/aws.png
+    - images/profile.png
+    - images/profile_image.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
